# agentflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agentflow/core/: abstract_actor.py  abstract_event.py  event_emitter.py
agentflow/utility/: logger.py  terminal_client.py  websocket_server.py
examples/: basic_example.py  basic_terminal_example.py
examples/websocket/: actors.py  client.py  events.py  server.py
